<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/LoginMarginLeft"
    >

    <include layout="@layout/include_personage_detail"
        android:id="@+id/title_add_address"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/LoginPhoneTvMarginTop"
            android:text="@string/AddReceverName"
            android:textSize="@dimen/LoginTvSize" />

        <EditText
            android:id="@+id/add_address_name_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/loginEtHeight"
            android:layout_marginTop="@dimen/loginPhoneEtMarginTop"
            android:background="@drawable/shape_login_et_border"
            android:textCursorDrawable="@mipmap/cursor"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginPswTvMarginTop"
            android:text="@string/AddReceverPhoneNum"
            android:textSize="@dimen/LoginTvSize" />

        <EditText
            android:id="@+id/add_address_phone_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/loginEtHeight"
            android:layout_marginTop="@dimen/loginPhoneEtMarginTop"
            android:background="@drawable/shape_login_et_border"
            android:inputType="phone"
            android:textCursorDrawable="@mipmap/cursor" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginPswTvMarginTop"
            android:text="@string/AddAddress"
            android:textSize="@dimen/LoginTvSize" />

        <EditText
            android:id="@+id/add_address_et"
            android:layout_width="match_parent"
            android:layout_height="@dimen/AddAddressHeight"
            android:layout_marginTop="@dimen/loginPhoneEtMarginTop"
            android:background="@drawable/shape_login_et_border"
            android:textCursorDrawable="@mipmap/cursor" />

        <Button
            android:id="@+id/add_address_btn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/loginEtHeight"
            android:layout_marginTop="@dimen/loginRegisterMarginLogin"
            android:background="@color/loginRegisterTvBackground"
            android:gravity="center"
            android:text="@string/AddAddressBtnTv"
            android:textColor="@color/mainTextViewColor"
            android:textSize="@dimen/loginBtnTvSize" />

    </LinearLayout>
</LinearLayout>